favicon and title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Sunflower</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <style>
       html, body {
         width: 100%;
